--- a/medicine.html
+++ b/medicine.html
@@ -42,6 +42,12 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <style>
+      .card {
+        border: none;
+      }
+    </style> 
   </head>
 
   <body class="sub_page">
@@ -150,11 +156,82 @@
     <!-- end discount section -->
 
     <!-- health section -->
-
+    
     <section class="health_section layout_padding">
       <div class="health_carousel-container">
         <h2 class="text-uppercase">Vitamins & Supplements</h2>
-        <div class="carousel-wrap layout_padding2">
+
+        <div class="card mb-3" style="width: 100%;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="images/Galaxy products-02.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="width: 100%;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="images/Galaxy products-07.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="width: 100%;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="images/Galaxy products-09.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="width: 100%;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="images/Galaxy products-04.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="width: 100%;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="images/Galaxy products-05.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="carousel-wrap layout_padding2">
           <div class="owl-carousel owl-2">
             <div class="item">
               <div class="box">
@@ -260,12 +337,10 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
+          </div> -->
+        <!-- </div> -->
       </div>
-      <div class="d-flex justify-content-center">
-        <a href=""> See more </a>
-      </div>
+      
     </section>
 
     <!-- end health section -->
@@ -338,8 +413,8 @@
     <!-- footer section -->
     <section class="container-fluid footer_section">
       <p>
-        &copy; 2019 All Rights Reserved. Design by
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; 2023 All Rights Reserved. Design by
+        <a href="https://html.design/">GIPES</a>
       </p>
     </section>
     <!-- footer section -->
