--- a/about.html
+++ b/about.html
@@ -83,28 +83,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="medicine.html"> Medicine </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="buy.html"> Online Buy </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="news.html"> News </a>
-                </li>
+                
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact us</a>
                 </li>
               </ul>
-              <form class="form-inline ">
-                <input type="search" placeholder="Search">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-              <div class="login_btn-contanier ml-0 ml-lg-5">
-                <a href="">
-                  <img src="images/user.png" alt="">
-                  <span>
-                    Login
-                  </span>
-                </a>
-              </div>
             </div>
           </div>
 
@@ -125,7 +108,7 @@
       </div>
 
       <div class="img-box">
-        <img src="images/about-medicine.png" alt="">
+        <img src="images/Galaxy looggoos-02.png" alt="">
       </div>
       <div class="detail-box">
         <p>
@@ -133,11 +116,7 @@
           at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
           opposed to using 'Content here, content here', making it
         </p>
-        <div class="d-flex justify-content-center">
-          <a href="">
-            Read More
-          </a>
-        </div>
+      
       </div>
     </div>
   </section>
@@ -186,12 +165,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="medicine.html"> Medicine </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="buy.html"> Online Buy </a>
               </li>
             </ul>
           </div>
