--- a/about.html
+++ b/about.html
@@ -1,250 +1,304 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-<head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+    <title>GIPES</title>
 
-  <title>Medion</title>
+    <!-- slider stylesheet -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"
+    />
 
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    <!-- font awesome style -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-  <!-- font awesome style -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
+    <!-- fonts style -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:400,600,700|Roboto:400,700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="css/responsive.css" rel="stylesheet" />
+  </head>
 
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700|Roboto:400,700&display=swap" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
-</head>
-
-<body class="sub_page">
-  <div class="hero_area">
-    <!-- header section strats -->
-    <header class="header_section">
-      <div class="container">
-        <div class="top_contact-container">
-          <div class="tel_container">
-            <a href="">
-              <img src="images/telephone-symbol-button.png" alt=""> Call : +01 1234567890
-            </a>
-          </div>
-          <div class="social-container">
-            <a href="">
-              <img src="images/fb.png" alt="" class="s-1">
-            </a>
-            <a href="">
-              <img src="images/twitter.png" alt="" class="s-2">
-            </a>
-            <a href="">
-              <img src="images/instagram.png" alt="" class="s-3">
-            </a>
+  <body class="sub_page">
+    <div class="hero_area">
+      <!-- header section strats -->
+      <header class="header_section" style="background-color: darkgray">
+        <div class="container">
+          <div class="top_contact-container">
+            <div class="hwrap">
+              <div class="hmove">
+                <div class="hitem">
+                  Galaxy Initiative For Patient Economic Support (GIPES)
+                </div>
+                <div class="hitem">
+                  Galaxy Initiative For Patient Economic Support (GIPES)
+                </div>
+                <div class="hitem">
+                  Galaxy Initiative For Patient Economic Support (GIPES)
+                </div>
+                <div class="hitem">
+                  Galaxy Initiative For Patient Economic Support (GIPES)
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="">
-            <span>
-              Medion
-            </span>
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
+            <a class="navbar-brand" href="index.html">
+              <img src="images/Galaxy looggoos-02.png" alt="" />
+              <span> GIPES </span>
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex  flex-column flex-lg-row align-items-center w-100 justify-content-between">
-              <ul class="navbar-nav  ">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div
+                class="d-flex flex-column flex-lg-row align-items-center w-100 justify-content-between"
+              >
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="index.html"
+                      >Home <span class="sr-only">(current)</span></a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html"> About </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="medicine.html"> Medicine </a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </header>
+      <!-- end header section -->
+    </div>
+
+    <!-- about section -->
+    <section class="about_section layout_padding">
+      <div class="container">
+        <div class="custom_heading-container">
+          <h2>About Us</h2>
+        </div>
+
+        <div class="img-box">
+          <img src="images/Galaxy looggoos-02.png" alt="" />
+        </div>
+        <div class="detail-box">
+          <h2>
+            Welcome to Galaxy Pharma, where our commitment to healthcare
+            excellence knows no bounds!
+          </h2>
+          <br />
+          <h3>Establishment</h3>
+          <p style="text-align: justify">
+            Since our establishment in 2003, Galaxy Pharma has continuously
+            evolved to become one of Pakistan's leading pharmaceutical
+            companies. We take immense pride in our expertise across various
+            fields, including Infertility, Gynecology, Oncology,
+            Surgical/Orthopedic, Cosmetics/Aesthetics, and Diabetes/Anesthesia.
+            As part of our growth, we have expanded our portfolio to include
+            Nutraceuticals manufacturing, catering to the diverse needs of our
+            customers. At Galaxy Pharma, we stand at the forefront of Women's
+            Healthcare, offering an unparalleled range of products and services.
+            Our journey began with a focused endeavor in infertility treatments,
+            and from there, we have grown exponentially to encompass Oncology,
+            Obstetrics & Gynecology, Nutraceuticals, Diagnostics, and Surgical
+            Management. With a relentless pursuit of excellence, we have
+            transitioned from a mere marketing firm to a state-of-the-art
+            manufacturing facility located in the thriving Korangi Creek
+            Industrial Park.
+          </p>
+          <h2>
+            Our Commitment to Accessibility, Affordability, and Social
+            Responsibility
+          </h2>
+          <p style="text-align: justify">
+            Our dedication has earned us exclusive marketing and distribution
+            rights in Pakistan from several renowned multinational
+            pharmaceutical companies. By offering quality products that are
+            bioequivalent to the industry leaders, we ensure accessibility and
+            affordability for all members of our diverse community. At Galaxy
+            Pharma, we prioritize the dissemination of scientific information
+            and employ a dynamic marketing strategy that includes public
+            awareness campaigns, disease prevention initiatives, scientific
+            promotion, and effective customer relationship management. We
+            consider social responsibility and the enhancement of the medical
+            community as integral components of our philosophy. By continuously
+            adding value to the lives of our patients and healthcare
+            professionals, we strive to make a positive impact on society as a
+            whole. <br>
+            At Galaxy Pharma, our vision is to achieve unrivaled
+            prominence in the healthcare sector. With a focus on innovation,
+            quality, and customer satisfaction, we are determined to surpass
+            expectations and establish new benchmarks within the industry. Join
+            us on this transformative journey towards a healthier future.
+            Experience the unrivaled excellence of Galaxy Pharma, where
+            affordability meets uncompromising quality, and compassion meets
+            innovation. For comprehensive information about our products,
+            services, and initiatives, we invite you to explore our website or
+            reach out to our dedicated team. Together, let us shape a healthier
+            and brighter tomorrow.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- info section -->
+    <section class="info_section layout_padding2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="info_contact">
+              <h4>Contact</h4>
+              <div class="box">
+                <div class="img-box">
+                  <img src="images/telephone-symbol-button.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h6>+01 123567894</h6>
+                </div>
+              </div>
+              <div class="box">
+                <div class="img-box">
+                  <img src="images/email.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h6>demo@gmail</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="info_menu">
+              <h4>Menu</h4>
+              <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html"
+                    >Home <span class="sr-only">(current)</span></a
+                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> About </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="medicine.html"> Medicine </a>
-                </li>
-                
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
-                </li>
               </ul>
             </div>
           </div>
-
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
-  </div>
-
-
-  <!-- about section -->
-  <section class="about_section layout_padding">
-    <div class="container">
-      <div class="custom_heading-container ">
-        <h2>
-          About Us
-        </h2>
-      </div>
-
-      <div class="img-box">
-        <img src="images/Galaxy looggoos-02.png" alt="">
-      </div>
-      <div class="detail-box">
-        <p>
-          It is a long established fact that a reader will be distracted by the readable content of a page when looking
-          at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-          opposed to using 'Content here, content here', making it
-        </p>
-      
-      </div>
-    </div>
-  </section>
-
-
-
-  <!-- info section -->
-  <section class="info_section layout_padding2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="info_contact">
-            <h4>
-              Contact
-            </h4>
-            <div class="box">
-              <div class="img-box">
-                <img src="images/telephone-symbol-button.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  +01 123567894
-                </h6>
-              </div>
-            </div>
-            <div class="box">
-              <div class="img-box">
-                <img src="images/email.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  demo@gmail
-                </h6>
-              </div>
+          <div class="col-md-6">
+            <div class="info_news">
+              <h4>newsletter</h4>
+              <form action="">
+                <input type="text" placeholder="Enter Your email" />
+                <div
+                  class="d-flex justify-content-center justify-content-md-end mt-3"
+                >
+                  <button>Subscribe</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="info_menu">
-            <h4>
-              Menu
-            </h4>
-            <ul class="navbar-nav  ">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="info_news">
-            <h4>
-              newsletter
-            </h4>
-            <form action="">
-              <input type="text" placeholder="Enter Your email">
-              <div class="d-flex justify-content-center justify-content-md-end mt-3">
-                <button>
-                  Subscribe
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
+    <!-- end info section -->
 
-  <!-- end info section -->
+    <!-- footer section -->
+    <section class="container-fluid footer_section">
+      <p>
+        &copy; 2019 All Rights Reserved. Design by
+        <a href="https://html.design/">Free Html Templates</a>
+      </p>
+    </section>
+    <!-- footer section -->
 
-  <!-- footer section -->
-  <section class="container-fluid footer_section">
-    <p>
-      &copy; 2019 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </section>
-  <!-- footer section -->
-
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js">
-  </script>
-  <script type="text/javascript">
-    $(".owl-carousel").owlCarousel({
-      loop: true,
-      margin: 10,
-      nav: true,
-      navText: [],
-      autoplay: true,
-      responsive: {
-        0: {
-          items: 1
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"
+    ></script>
+    <script type="text/javascript">
+      $(".owl-carousel").owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        navText: [],
+        autoplay: true,
+        responsive: {
+          0: {
+            items: 1,
+          },
+          600: {
+            items: 2,
+          },
+          1000: {
+            items: 4,
+          },
         },
-        600: {
-          items: 2
-        },
-        1000: {
-          items: 4
-        }
-      }
-    });
-  </script>
-  <script type="text/javascript">
-    $(".owl-2").owlCarousel({
-      loop: true,
-      margin: 10,
-      nav: true,
-      navText: [],
-      autoplay: true,
+      });
+    </script>
+    <script type="text/javascript">
+      $(".owl-2").owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        navText: [],
+        autoplay: true,
 
-      responsive: {
-        0: {
-          items: 1
+        responsive: {
+          0: {
+            items: 1,
+          },
+          600: {
+            items: 2,
+          },
+          1000: {
+            items: 4,
+          },
         },
-        600: {
-          items: 2
-        },
-        1000: {
-          items: 4
-        }
-      }
-    });
-  </script>
-</body>
-
+      });
+    </script>
+  </body>
 </html>
