--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
                   <img src="images/telephone-symbol-button.png" alt="" />
                 </div>
                 <div class="detail-box">
-                  <h6>+01 123567894</h6>
+                  <h6>0301-5288141</h6>
                 </div>
               </div>
               <div class="box">
@@ -205,7 +205,7 @@
                   <img src="images/email.png" alt="" />
                 </div>
                 <div class="detail-box">
-                  <h6>demo@gmail</h6>
+                  <h6>info@gipes.com.pk</h6>
                 </div>
               </div>
             </div>
@@ -221,6 +221,8 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="medicine.html"> Medicine </a>
+                  <a class="nav-link" href="contact.html"> Conatct Us </a>
                 </li>
               </ul>
             </div>
@@ -247,8 +249,8 @@
     <!-- footer section -->
     <section class="container-fluid footer_section">
       <p>
-        &copy; 2019 All Rights Reserved. Design by
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; 2023 All Rights Reserved. Design by
+        <a href="https://html.design/">Galaxy Pharma Private Limited</a>
       </p>
     </section>
     <!-- footer section -->
