--- a/about.html
+++ b/about.html
@@ -168,18 +168,18 @@
             community as integral components of our philosophy. By continuously
             adding value to the lives of our patients and healthcare
             professionals, we strive to make a positive impact on society as a
-            whole. <br>
-            At Galaxy Pharma, our vision is to achieve unrivaled
-            prominence in the healthcare sector. With a focus on innovation,
-            quality, and customer satisfaction, we are determined to surpass
-            expectations and establish new benchmarks within the industry. Join
-            us on this transformative journey towards a healthier future.
-            Experience the unrivaled excellence of Galaxy Pharma, where
-            affordability meets uncompromising quality, and compassion meets
-            innovation. For comprehensive information about our products,
-            services, and initiatives, we invite you to explore our website or
-            reach out to our dedicated team. Together, let us shape a healthier
-            and brighter tomorrow.
+            whole. <br />
+            At Galaxy Pharma, our vision is to achieve unrivaled prominence in
+            the healthcare sector. With a focus on innovation, quality, and
+            customer satisfaction, we are determined to surpass expectations and
+            establish new benchmarks within the industry. Join us on this
+            transformative journey towards a healthier future. Experience the
+            unrivaled excellence of Galaxy Pharma, where affordability meets
+            uncompromising quality, and compassion meets innovation. For
+            comprehensive information about our products, services, and
+            initiatives, we invite you to explore our website or reach out to
+            our dedicated team. Together, let us shape a healthier and brighter
+            tomorrow.
           </p>
         </div>
       </div>
