--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   <body class="sub_page">
     <div class="hero_area">
       <!-- header section strats -->
-      <header class="header_section" style="background-color: darkgray">
+      <header class="header_section" style="background-color: #ff6788">
         <div class="container">
           <div class="top_contact-container">
             <div class="hwrap">
@@ -68,8 +68,8 @@
             </div>
           </div>
         </div>
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
+        <div class="container-fluid" style="background-color: rgb(133, 133, 228);">
+          <nav class="navbar navbar-expand-lg custom_nav-container pt-3" >
             <a class="navbar-brand" href="index.html">
               <img src="images/Galaxy looggoos-02.png" alt="" />
               <span> GIPES </span>
@@ -102,7 +102,6 @@
                   <li class="nav-item">
                     <a class="nav-link" href="medicine.html"> Medicine </a>
                   </li>
-
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact us</a>
                   </li>
@@ -116,9 +115,9 @@
     </div>
 
     <!-- about section -->
-    <section class="about_section layout_padding">
+    <section class="about_section layout_paddingA">
       <div class="container">
-        <div class="custom_heading-container">
+        <div class="custom_heading-container" style="margin-top: 50px;">
           <h2>About Us</h2>
         </div>
 
@@ -183,10 +182,15 @@
           </p>
         </div>
       </div>
+      <div class="card mb-4" style="background-color: transparent; border: none;">
+        <img class="card-img-top" src="images/logosCopy.png" alt="Card image cap">
+      </div>
+      
     </section>
 
     <!-- info section -->
-    <section class="info_section layout_padding2">
+
+    <section class="info_section layout_padding2" style="background-color: rgb(133, 133, 228);">
       <div class="container">
         <div class="row">
           <div class="col-md-3">
@@ -194,7 +198,9 @@
               <h4>Contact</h4>
               <div class="box">
                 <div class="img-box">
-                  <img src="images/telephone-symbol-button.png" alt="" />
+                  <a href="https://wa.me/1234567890" target="_blank">
+                    <img src="images/whatsapplogo.png" alt="WhatsApp" />
+                  </a>
                 </div>
                 <div class="detail-box">
                   <h6>0301-5288141</h6>
@@ -221,23 +227,14 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> About </a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="medicine.html"> Medicine </a>
-                  <a class="nav-link" href="contact.html"> Conatct Us </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact Us </a>
                 </li>
               </ul>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="info_news">
-              <h4>newsletter</h4>
-              <form action="">
-                <input type="text" placeholder="Enter Your email" />
-                <div
-                  class="d-flex justify-content-center justify-content-md-end mt-3"
-                >
-                  <button>Subscribe</button>
-                </div>
-              </form>
             </div>
           </div>
         </div>
@@ -247,10 +244,9 @@
     <!-- end info section -->
 
     <!-- footer section -->
-    <section class="container-fluid footer_section">
+    <section class="container-fluid footer_section" style="background-color: #ff6788">
       <p>
-        &copy; 2023 All Rights Reserved. Design by
-        <a href="https://html.design/">Galaxy Pharma Private Limited</a>
+        &copy; 2023 All Rights Reserved. Design by Galaxy Pharma Private Limited</a>
       </p>
     </section>
     <!-- footer section -->
