--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <meta name="author" content="" />
 
     <title>GIPES</title>
+    <link rel="icon" type="image/x-icon" href="images/icon.png">
 
     <!-- slider stylesheet -->
     <link
@@ -68,11 +69,14 @@
             </div>
           </div>
         </div>
-        <div class="container-fluid" style="background-color: rgb(133, 133, 228);">
+        <div
+          class="container-fluid"
+          style="background-color: rgb(182, 194, 255)"
+        >
           <nav class="navbar navbar-expand-lg custom_nav-container pt-3" >
             <a class="navbar-brand" href="index.html">
               <img src="images/Galaxy looggoos-02.png" alt="" />
-              <span> GIPES </span>
+              
             </a>
             <button
               class="navbar-toggler"
@@ -97,11 +101,12 @@
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html"> About </a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="medicine.html"> Medicine </a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html"> About Us</a>
+                  </li>
+                  
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact us</a>
                   </li>
@@ -122,7 +127,7 @@
         </div>
 
         <div class="img-box">
-          <img src="images/Galaxy looggoos-02.png" alt="" />
+          <img src="images/Galaxy looggoos-03.png" alt="" />
         </div>
         <div class="detail-box">
           <h2>
@@ -190,7 +195,7 @@
 
     <!-- info section -->
 
-    <section class="info_section layout_padding2" style="background-color: rgb(133, 133, 228);">
+    <section class="info_section layout_padding2" style="background-color:rgb(143, 161, 255)">
       <div class="container">
         <div class="row">
           <div class="col-md-3">
@@ -226,7 +231,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="about.html"> About Us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="medicine.html"> Medicine </a>
@@ -246,7 +251,7 @@
     <!-- footer section -->
     <section class="container-fluid footer_section" style="background-color: #ff6788">
       <p>
-        &copy; 2023 All Rights Reserved. Design by Galaxy Pharma Private Limited</a>
+        &copy; 2023 All Rights Reserved. Design and Developed GGC IT Department</a>
       </p>
     </section>
     <!-- footer section -->
