--- a/contact.html
+++ b/contact.html
@@ -87,86 +87,85 @@ margin-bottom: 20px;
 text-align: center;
 }
 }
+
 </style>
 </head>
 
-<body>
+<body style="background-color: whitesmoke;">
 <div class="hero_area">
 <!-- header section strats -->
 <header class="header_section" style="background-color: #ff6788">
-<div class="container">
-<div class="top_contact-container">
-<div class="hwrap">
-<div class="hmove">
-<div class="hitem">
-Galaxy Initiative For Patient Economic Support (GIPES)
-</div>
-<div class="hitem">
-Galaxy Initiative For Patient Economic Support (GIPES)
-</div>
-<div class="hitem">
-Galaxy Initiative For Patient Economic Support (GIPES)
-</div>
-<div class="hitem">
-Galaxy Initiative For Patient Economic Support (GIPES)
-</div>
-</div>
-</div>
-</div>
-</div>
-<div
-class="container-fluid"
-style="background-color: rgb(182, 194, 255)"
->
-<nav class="navbar navbar-expand-lg custom_nav-container pt-3">
-<a class="navbar-brand" href="index.html">
-<img src="images/Galaxy looggoos-02.png" alt="" />
+  <div class="container">
+    <div class="top_contact-container">
+      <div class="hwrap">
+        <div class="hmove">
+          <div class="hitem">
+            Galaxy Initiative For Patient Economic Support (GIPES)
+          </div>
+          <div class="hitem">
+            Galaxy Initiative For Patient Economic Support (GIPES)
+          </div>
+          <div class="hitem">
+            Galaxy Initiative For Patient Economic Support (GIPES)
+          </div>
+          <div class="hitem">
+            Galaxy Initiative For Patient Economic Support (GIPES)
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div
+    class="container-fluid"
+    style="background-color: rgb(182, 194, 255)"
+  >
 
-</a>
-<button
-class="navbar-toggler"
-type="button"
-data-toggle="collapse"
-data-target="#navbarSupportedContent"
-aria-controls="navbarSupportedContent"
-aria-expanded="false"
-aria-label="Toggle navigation"
->
-<span class="navbar-toggler-icon"></span>
-</button>
-
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-<div
-class="d-flex flex-column flex-lg-row align-items-center w-100 justify-content-between"
->
-<ul class="navbar-nav">
-<li class="nav-item active">
-<a class="nav-link" href="index.html"
->Home <span class="sr-only">(current)</span></a
->
-</li>
-<li class="nav-item">
-<a class="nav-link" href="medicine.html"> Medicine </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="about.html"> About Us</a>
-</li>
-
-<li class="nav-item">
-<a class="nav-link" href="contact.html">Contact us</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
-</div>
+  <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
+    <a class="navbar-brand" href="index.html">
+      <img src="images/Galaxy looggoos-02.png" alt="" />
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+      <ul class="navbar-nav"style="padding: 10px 25px;" >
+        <li class="nav-item active" style="padding: 10px 25px; font-size: larger;">
+          <a class="nav-link"  href="index.html"
+            >Home <span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item" style="padding: 10px 25px;">
+          <a class="nav-link" href="medicine.html"> Medicine </a>
+        </li>
+        <li class="nav-item" style="padding: 10px 25px;">
+          <a class="nav-link" href="about.html"> About Us</a>
+        </li>
+        <li class="nav-item" style="padding: 10px 25px;">
+          <a class="nav-link" href="contact.html">Contact us</a>
+        </li>
+        <li class="nav-item" style="padding: 10px 25px;">
+          <a class="nav-link" href="https://v2.indolj.io/menu-galaxypharma" style="border:  #ff6788 solid 3px; border-radius: 12px;">Shop Now</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  </div>
 </header>
 
 <!-- Add the necessary CSS and JavaScript files -->
 
 
 <section>
-<div class="card sm-3">
+<div class="card sm-3" >
 <img class="card-img-top" src="images/Galaxy building-01.png" alt="Card image cap">
 <div class="card-body">
 </div>
@@ -221,56 +220,96 @@ Fax:+9221351481167
 </div>
 </div>
 
-</section>
 
-<section class="info_section layout_padding2" style="background-color:rgb(143, 161, 255)">
-<div class="container">
-<div class="row">
-<div class="col-md-3">
-<div class="info_contact">
-<h4>Contact</h4>
-<div class="box">
-<div class="img-box">
-<a href="https://wa.me/1234567890" target="_blank">
-<img src="images/whatsapplogo.png" alt="WhatsApp"  />
-</a>
-</div>
-<div class="detail-box">
-<h6>0301-5288141</h6>
-</div>
-</div>
-<div class="box">
-<div class="img-box">
-<img src="images/email.png" alt="" />
-</div>
-<div class="detail-box">
-<h6>info@gipes.com.pk</h6>
-</div>
-</div>
-</div>
-</div>
-<div class="col-md-3">
-<div class="info_menu">
-<h4>Menu</h4>
-<ul class="navbar-nav">
-<li class="nav-item active">
-<a class="nav-link" href="index.html"
->Home <span class="sr-only">(current)</span></a
+<section
+class="info_section layout_padding2"
+style="background-color: rgb(143, 161, 255)"
 >
-</li>
-<li class="nav-item">
-<a class="nav-link" href="about.html"> About Us </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="medicine.html"> Medicine </a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="contact.html">Contact Us </a>
-</li>
-</ul>
-</div>
-</div>
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="info_contact">
+        <h4>Contact Us</h4>
+        <div class="box">
+          <div class="img-box">
+            <a href="https://api.whatsapp.com/send/?phone=923015288141&text&type=phone_number&app_absent=0"  target="_blank">
+              <img src="images/whatsapplogo.png" alt="WhatsApp" />
+            </a>
+          </div>
+          <div class="detail-box">
+            <h6>0301-5288141</h6>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/telephone-symbol-button.png" alt="" />
+          </div>
+          <div class="detail-box">
+            <h6>+92-21351481115</h6>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/fax.png" alt="" />
+          </div>
+          <div class="detail-box">
+            <h6>+9221351481167</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="info_menu">
+        <h4>Menu</h4>
+        <ul class="navbar-nav">
+          <!-- <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="about.html"> About Us </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="medicine.html"> Medicine </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us </a>
+          </li>
+        </ul>
+      </div>
+      
+    </div>
+    <div class="col-md-3">
+      <div class="info_contact">
+        <h4>Contact Us</h4>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/fb.png" alt="" />
+          </div>
+          <div class="detail-box">
+            <a href=" https://www.facebook.com/company/galaxy-pharma-ltd" style="color: white; border: none; text-decoration: none;">GIPES Facebook</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/linkedin.png" alt="" />
+          </div>
+          <div class="detail-box">
+            <a href=" https://www.linkedin.com/company/galaxy-pharma-ltd" style="color: white; border: none; text-decoration: none;">GIPES LinkedIn</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/email.png" alt="" />
+          </div>
+          <div class="detail-box">
+            <h6>info@gipes.com.pk</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </div>
 </section>
 
